learn/python-jupyter/jupyter_pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: python-jupyter-deployment
  labels:
    purpose: get-token
spec:
  containers:
  - name: jupyter
    image: jupyter/scipy-notebook
    command: ["jupyter"]
    args: ["notebook list"]
  restartPolicy: OnFailure
